--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $menu = wofi --show drun
 
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & swaync & hypridle & hyprpaper
+exec-once = clipse -listen
 
 # used for screen sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -217,7 +218,7 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, exec, $terminal --class clipse -e clipse
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
@@ -227,9 +228,12 @@ bind = SHIFT, PRINT, exec, hyprshot -m region
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
-bind = $mainMod, j, movefocus, r
+bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
-bind = $mainMod, l, movefocus, d
+bind = $mainMod, j, movefocus, d
+
+bind= $mainMod, F, fullscreen
+bind= $mainMod SHIFT, F, togglefloating
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -306,3 +310,8 @@ windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule = noblur, class:^(xwaylandvideobridge)$
 windowrule = nofocus, class:^(xwaylandvideobridge)$
+
+# positioning clipse - clipboard manager
+windowrule = float, class:(clipse)
+windowrule = size 622 652, class:(clipse)
+windowrule = stayfocused, class:(clipse)
